# cognithor

./: .dockerignore  .env.example  .gitignore  API.md  ARCHITECTURE.md  AUDIT_RESULTS.md  CHANGELOG.md  CHANNELS_GUIDE.md  CONFIG_REFERENCE.md  CONTRIBUTING.md  DATABASE.md  DEVELOPER.md  Dockerfile  FAQ.md  FIRST_BOOT.md  FLUTTER_API_CONTRACT.md  GEPA.md  IDENTITY.md  KUBERNETES.md  MCP_TOOLS.md  MONITORING.md  PERFORMANCE_TUNING.md  PREREQUISITES.md  QUICKSTART.md  README.md  SECURITY_AUDIT_FINDINGS.md  SKILLS_GUIDE.md  TESTING.md  TROUBLESHOOTING.md  config.yaml.example  demo.py  docker-compose.prod.yml  install.bat  install.ps1  install.sh  pyproject.toml  requirements.txt  start_cognithor.bat
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: beta-release.yml  build-deb.yml  build-mobile.yml  ci.yml  publish.yml
.hypothesis/constants/: 006b559781a41f7f  0106953e2a3e6d3d  032bb05e75ff8d56  037c889e4d2de558  041b82baf95116f0  0482fa8af9f99848  0562fa7ba43145ff  0570a7c52cd987f9  0588a2471da78b21  05f4e8f4e3a08397  0628f2618034526e  067b7cfeea41ca31  06c88ddd0840a021  0736e2d4acddd01a  0768246cba53164c  078c011b1a444b3d  07b8446a052edf99  081e08722507296d  0863bc6306419568  09482feeaa124f43  094886904864b0e6  09ae28b390a241d0  09b41a6be62d9684  09c940a775c04b02  09d768fa4c9c7896  0a0ffe2e9fda6ac1  0a174ab092bdf149  0ba89159ef525d04  0cfa12dfbf9e9abb  0d65a410db824952  0e7f8902539f63f3  100da2413d65b0b1  10acf19c931251b8  11cebddb0b161883  11dbb597ed84f3a9  11e12b17120b2c95  124a87fa5b2d89f0  12d87c20d658fb23  1362779ed5c908c0  13c423e236a9d80b  (+506 more)
PLAN/: 2026-03-27-evolution-engine-master-plan.md  2026-03-27-evolution-phase1-system-detector.md
apps/pwa/: package.json
cognithor-vscode/: cognithor-vscode-0.1.0.vsix  package-lock.json  package.json
data/legal/: dpia_template.md  privacy_notice_de.md  privacy_notice_en.md  processing_register.yaml
data/procedures/: code-review.md  marketplace-monitor.md  meeting-protokoll.md  tages-report.md  vertrag-pruefer.md  workflow-recorder.md
deep_research/: deep_research_agent.py  deep_research_architecture.jsx
deploy/: Caddyfile  README.md  install-server.sh  jarvis-webui.service  jarvis.service  nginx.conf
docs/: index.html
docs/arc-agi-3/: 2026-03-29-tactical-memory-design.md  2026-03-29-tactical-memory-plan.md  cognithor-arc-agi-3-spec-corrected.md  cognithor-arc-agi-3-spec.md  implementation-plan.md
examples/: README.md  api_client.py  custom_skill.md  websocket_client.py
flutter_app/: .metadata  README.md  analysis_options.yaml  pubspec.yaml
flutter_app/lib/: main.dart
flutter_app/test/: widget_test.dart
flutter_app/web/: index.html  manifest.json
flutter_app/windows/: CMakeLists.txt
installer/: agents.yaml.default  build_deb.py  build_installer.py  cognithor.iss  first_run.py
scripts/: bootstrap_windows.py  first_boot.py  live_smoke_test.py  preflight_check.py  publish_builtin_skills.py  smoke_test.py  start_llama_server.bat
skills/wetter_abfrage/: manifest.json
src/jarvis/: __init__.py  __main__.py  config.py  config_manager.py  healthcheck.py  models.py
tests/: test_a2a_coverage.py  test_a2a_server_adapter_coverage.py  test_audit_fixes.py  test_bootstrap_and_config_fixes.py  test_browser_coverage.py  test_calendar_tools.py  test_computer_use_phase2.py  test_config_manager.py  test_config_manager_ext.py  test_context_pipeline_parallel.py  test_cross_platform_self_improvement.py  test_cycle_controller.py  test_deep_coverage.py  test_desktop_tools.py  test_email_tools.py  test_evolution_e2e.py  test_final_coverage.py  test_git_tools.py  test_graph_coverage.py  test_hitl_manager.py  test_install_fixes.py  test_kanban_api.py  test_kanban_engine.py  test_kanban_models.py  test_kanban_tools.py  test_notification_tools.py  test_portability_hardening.py  test_preflight.py  test_proof_7_fixes.py  test_recovery.py  test_search_tools.py  test_secondary_coverage.py  test_session_analyzer.py  test_tool_permissions.py  test_ui_api_integration.py  verify_critical_paths.py
tests/test_aacs/: test_capability_token.py  test_config.py  test_integration.py  test_token_issuer.py  test_token_validator.py
tests/test_arc/: conftest.py  test_agent.py  test_analyzer_integration.py  test_episode_memory.py  test_error_handler.py  test_explorer.py  test_game_analyzer.py  test_game_profile.py  test_goal_inference.py  test_keyboard_solver.py  test_mechanics_model.py  test_per_game_solver.py  test_solver.py  test_state_graph.py  test_task_parser.py
tests/test_atl/: test_action_queue.py  test_config.py  test_goal_manager.py  test_journal.py  test_proactive_goals.py  test_prompt.py  test_risk_ceiling.py  test_thinking_cycle.py
tests/test_audit/: test_audit_logger.py  test_compliance.py
tests/test_benchmark/: test_suite.py
tests/test_browser/: test_vision.py  test_vision_tools.py
tests/test_captcha/: test_classifier.py  test_detector.py  test_integration.py  test_models.py  test_solver.py  test_stealth.py  test_strategies.py
tests/test_channels/: test_api_enhanced.py  test_canvas.py  test_channels_parametrized.py  test_cli.py  test_commands.py  test_config_routes.py  test_connectors.py  test_discord.py  test_discord_enhanced.py  test_feishu_enhanced.py  test_google_chat.py  test_google_chat_enhanced.py  test_imessage.py  test_interactive.py  test_irc.py  test_knowledge_graph_routes.py  test_matrix.py  test_mattermost_enhanced.py  test_signal.py  test_slack.py  test_slack_enhanced.py  test_status_callback.py  test_talk_mode_enhanced.py  test_teams.py  test_telegram.py  test_telegram_enhanced.py  test_telegram_extra.py  test_telegram_webhook.py  test_tts_elevenlabs.py  test_tts_elevenlabs_enhanced.py  test_voice.py  test_voice_bridge.py  test_voice_bridge_enhanced.py  test_voice_enhanced.py  test_voice_ws_bridge.py  test_voice_ws_bridge_enhanced.py  test_webui.py  test_webui_enhanced.py  test_whatsapp.py  test_workflow_graph_routes.py
tests/test_core/: test_agent_router.py  test_bindings.py  test_checkpoint.py  (+42 more)
ui/: index.html  vite.config.js
(+795 files in other folders)
